Changes made inorder to cooperate with the frontend
